Format CSS, fix grid spacing

--- a/frontend/styles/_base.scss
+++ b/frontend/styles/_base.scss
@@ -109,6 +109,11 @@ p {
   width: 1px;
 }
 
+.icon {
+  height: 1.5rem;
+  width: 1.5rem;
+}
+
 @media (width <= 48rem) {
   h1 {
   }
