--- a/frontend/styles/components/_header.scss
+++ b/frontend/styles/components/_header.scss
@@ -38,13 +38,26 @@
     left: 0;
     order: 2;
     top: 0;
+
+    &::after {
+      @include themed {
+        background-color: t("navBackground");
+      }
+      content: "";
+      display: block;
+      height: 3rem;
+      left: 0;
+      position: fixed;
+      top: 0;
+      width: 100%;
+      z-index: 10;
+    }
   }
 
   .site-name {
     align-items: flex-start;
     font-size: 1.95rem;
     justify-content: flex-end;
-    margin: 0;
     text-align: right;
   }
 }
