--- a/frontend/styles/components/_navigation.scss
+++ b/frontend/styles/components/_navigation.scss
@@ -52,6 +52,7 @@
       order: 1;
       position: fixed;
       top: 0;
+      z-index: 15;
     }
   }
 
